Fix to prevent scrollbar on edge.

--- a/frontend/stylesheets/base/_typography.scss
+++ b/frontend/stylesheets/base/_typography.scss
@@ -3,6 +3,7 @@ body {
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
   color: colour('text');
+  overflow-x: hidden;
 }
 
 @include govuk-media-query ($from: tablet) {
